@@ -3,10 +3,11 @@
 		<script>
 			// Wait until the DOM has loaded before querying the document
 			$(document).ready(function(){
+                            var $active, $content;
 				$('ul.tabs').each(function(){
 					// For each set of tabs, we want to keep track of
 					// which tab is active and it's associated content
-					var $active, $content, $links = $(this).find('a');
+					var $links = $(this).find('a');
 
 					// If the location.hash matches one of the links, use that as the active tab.
 					// If no match is found, use the first link as the initial active tab.
@@ -25,6 +26,11 @@
 						$active.removeClass('active');
 						$content.hide();
 
+                                            // Record the location in the history
+                                            var new_active = $(this).attr('href');
+                                            var state = {location: new_active};
+                                            history.pushState(state, '', new_active);
+
 						// Update the variables with the new link and content
 						$active = $(this);
 						$content = $($(this).attr('href'));
@@ -37,5 +43,32 @@
 						e.preventDefault();
 					});
 				});
+                            $(window).on("popstate", function(e) {
+                                if (e.originalEvent.state !== null) {
+                                    $active.removeClass('active');
+				    $content.hide();
+				    $active = $('a[href="' + e.originalEvent.state.location + '"]');
+				    $content = $($active.attr('href'));
+				    // Make the tab active.
+				    $active.addClass('active');
+				    $content.show();
+                                } else {
+                                    $active.removeClass('active');
+				    $content.hide();
+				    $('ul.tabs').each(function(){
+					// For each set of tabs, find and display the default tab
+					var $links = $(this).find('a');
+
+					// If the location.hash matches one of the links, use that as the active tab.
+					// If no match is found, use the first link as the initial active tab.
+					$active = $($links.filter('[href="'+location.hash+'"]')[0] || $links[0]);
+					$active.addClass('active');
+					$content = $($active.attr('href'));
+				        $content.show();
+				    });
+                                }
+                            });
 			});
+
+
 		</script>
